--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.mycompany</groupId>
     <artifactId>SimpleJunitProject</artifactId>
     <version>1.0.1</version>
-    <packaging>jar</packaging>
+<!--     <packaging>jar</packaging> -->
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
